AssaultCube ChangeLog
1.1.0.4 -> SVN TRUNK
---------------------

Please add all commited changes to the SVN trunk from last release here, check TODO's.
This changelog is a WIP!

Find me a cat!
---------------------

[*] Changelog updates - oh shi-

// TODO : find a better order for these categories

Weapons
---------------------

// TODO : please, report other changes (flowtron ? makkE ?)
[*] Sniper damage changed (82 -> 80)
[*] New shotgun behavior. // TODO : explain ?
[*] Quicknadethrow now switches to nade even if the player was attacking.
[*] Grenades accuracy, real shotgun accuracy.
[*] Sniper trail bug fixed. // TODO: Is this for the "stop the sniper trail upon hit thing"? If so I'm not 100% certain it's completely fixed. // Bukz
[*] Hudgun can be displayed when spectating (and in demos - e.g. /spechudgun 1).

Servers
---------------------

[*] Sets kill messages to appear in log for each weapon from a config file. (Default: serverkillmessages.cfg)
[*] New switch to disable game status table of scores logging. (-l switch)
[*] Linux server available HDD space bug fixed.
[*] /setnext bug fixed.
[*] Fixed bug with map names containing slashes.
[*] The carbine is now consistently called such. (not "Rifle")
[*] The server now differentiates between CTF/HTF scored flags in the serverlogs. (Useful for parsing/stats collection.)

Server browser
----------------------

[*] Colored ping in serverbrowser.
[*] Ability to connect to a server that requires a password via the server browser. (password protected, deban, etc.)

Media (maps/textures/models)
---------------------
// TODO add new maps & any new textures or models please :) (waypoints, new maps..)
[*] ac_edifice, ac_industrial, ac_stellar added to the official map package.

Mapping
---------------------
[*] Key "F7" is now key bound to toggle fullbright on/off.
[*] Key "7" is now key bound to "nextclosestent" - it gets typo'd all the time.
[*] entproperty now works in MP coop, but buffered.