@@ -518,6 +518,7 @@ menuitemcheckbox "Die 1: " "(soundmuted 32)"      [ mutesound 32 (! $arg1) ]
 menuitemcheckbox "Die 2: " "(soundmuted 33)"      [ mutesound 33 (! $arg1) ]
 menuitemcheckbox "Gib sounds: " "(soundmuted 48)" [ mutesound 48 (! $arg1) ]
 menuitemcheckbox "Tinnitus: " "(soundmuted 62)"   [ mutesound 62 (! $arg1) ]
+menuitemcheckbox "Heartbeat: " "(soundmuted 100)" [ mutesound 100 (! $arg1) ]
 
 newmenu "Mute movement sounds"
 
