@@ -109,7 +109,8 @@ registersound "voicecom/thanks_1"               // 95 : public
 registersound "voicecom/thanks_2"               // 96 : public
 registersound "voicecom/awesome_1"              // 97 : public
 registersound "voicecom/awesome_2"              // 98 : public
-registersound "misc/pickup_helmet"		// 99 - S_ITEMHELMET
+registersound "misc/pickup_helmet"              // 99 - S_ITEMHELMET
+registersound "player/heartbeat"                // 100 - S_HEARTBEAT
 
 						// Music
 registermusic "pingpong/Ping_Pong_-_Kamikadze"	// M_FLAGGRAB
