@@ -1,0 +1,4 @@
+heartbeat.ogg by Lunardrive (http://www.freesound.org/usersViewSingle.php?id=120830)
+    Four Heartbeats HQ_BeatSmith.wav (http://www.freesound.org/samplesViewSingle.php?id=22416)
+
+This file is licensed under the Creative Commons Sampling Plus 1.0 License. To view a copy of this license, visit http://creativecommons.org/licenses/sampling+/1.0/ or send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.
